add rule for google bot
git-svn-id: svn+ssh://ns3.da-cha.jp/var/svnrepos/drupal/trunk@48 86656eb4-bd25-0410-bb9e-a4d62780a196

--- a/.htaccess
+++ b/.htaccess
@@ -83,6 +83,8 @@ DirectoryIndex index.php
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
+
+  RewriteRule ^Articles/(.*)$ http://lwn.net/Articles/$1
 </IfModule>
 
 # $Id: .htaccess,v 1.73 2006/04/14 09:08:26 killes Exp $
